@@ -1,34 +1,18 @@
+/* CSS definitions for BreadCrumbsNavPlugin */
 
-#breadcrumbs { 
-    display: block;
-    font-size: xx-small;
-	padding-top: 5px;
-}
+#breadcrumbs { display: block; font-size: xx-small; padding-top: 5px; }
+ul#breadcrumbs li:first-child { color: #d1d1d1; }
+ul#breadcrumbs a { color: #e58579; }
+ul#breadcrumbs a:hover { color: #f00; }
 
-ul#breadcrumbs lh {
-    color: #d1d1d1;
-}
-
-ul#breadcrumbs a {
-    color: #e58579;
-}
-
-ul#breadcrumbs a:hover {
-    color: #f00;
-}
 /*
 #breadcrumbs li ul {
- background: #f7f7f7;
- color: #ccc;
- border: 1px solid;
- padding: 0;
- display: inline;
- margin: 0;
+ background: #f7f7f7; color: #ccc;
+ border: 1px solid; padding: 0; display: inline; margin: 0;
 }
 #breadcrumbs li li { padding: 0; }
 #breadcrumbs li li :link, #breadcrumbs li li :visited { padding: 0 1em }
 #breadcrumbs li li :link:hover, #breadcrumbs li li :visited:hover {
- background: #bba;
- color: #fff;
+ background: #bba; color: #fff;
 }
 */
